syntax = "proto3";

package user;

service UserService {
  rpc FindById(FindUserRequestDto) returns (FindUserResponseDto) {}
}

message FindUserResponseDto {
  string id = 1;
  string name = 2;
  string email = 3;
  string username = 4;
  string imgUrl = 5;
}

message FindUserRequestDto {
  string id = 1;
}